# finance-tracker-flet

./: .coverage  .gitignore  .gitmodules  BUILD.md  FLET_API_AUDIT_REPORT.md  KODA.md  LICENSE  README.md  ROADMAP.md  app.py  build_check.ps1  check_dialog_api.py  config.py  database.py  finance_tracker.spec  fix_dialog_tests.py  main.py  pyproject.toml
.claude/: settings.local.json
assets/: convert_icon.py
components/: calendar_widget.py  early_repayment_modal.py  execute_occurrence_modal.py  execute_pending_payment_modal.py  lender_modal.py  loan_modal.py  occurrence_details_modal.py  pending_payment_modal.py  pending_payments_widget.py  planned_transaction_modal.py  planned_transactions_widget.py  transaction_modal.py  transactions_panel.py
finance_tracker_flet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: __init__.py  plan_fact_service.py  recurrence_service.py  transaction_service.py
tests/: README_UI_Testing.md  conftest.py  property_generators.py  test_add_transaction_button_error_handling.py  test_balance_forecast_properties.py  test_calendar_legend_adaptive_properties.py  test_calendar_legend_adaptive_unit.py  test_calendar_legend_comprehensive_properties.py  test_calendar_legend_error_handling.py  test_calendar_legend_final_properties.py  test_calendar_legend_integration.py  test_calendar_legend_types_properties.py  test_calendar_legend_ui.py  test_calendar_legend_visual_properties.py  test_calendar_legend_width_fix_integration.py  test_calendar_legend_width_fix_properties.py  test_calendar_loan_payments.py  test_calendar_properties.py  test_calendar_selection_sync.py  test_categories_view.py  test_factories.py  (+78 more)
(+620 files in other folders)
