[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_tracker_flet"
version = "2.0.0"
description = "Finance Tracker desktop application built with Flet"
authors = [{name = "BarykinME"}]
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"
dependencies = [
    "flet>=0.25.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
]

[project.scripts]
finance-tracker = "finance_tracker.__main__:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["finance_tracker*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]
